# CF-VEdit

./: .gitignore  .gitmodules  AGENTS.md  CF-VEdit-Architecture-and-Narrative (给人看的）.md  CF-VEdit-Benchmark-Spec.md  CF-VEdit-Repo-Design.md  CLAUDE.md  Counterfactual-Video-Editing-Proposal.md  E2W-v0-Remove-Only-Spec.md  Sa2VA-Modification-Plan.md
.claude/skills/cf-vedit-eval/: SKILL.md
.claude/skills/cf-vedit-eval/scripts/: gemini_judge.py
.claude/skills/cf-vedit-eval/tests/: test_gemini_judge.py
.github/workflows/: ci.yml
e2w/: AGENTS.md  README.md  pyproject.toml
e2w/.github/workflows/: ci.yml
e2w/configs/: README.md  full.v0.json  full_smoke.v0.json  vanilla.v0.json  weights.v0.json
e2w/docs/: SCOPE.md  TRACEABILITY.md
e2w/docs/adr/: 0001-monorepo-splittable-benchmark.md  0002-scaffold-alongside-without-migration.md  0003-enable-full-untrained-a1-path.md  0004-query-token-runtime-overlay.md  0004-teacher-forced-tokens-runtime-overlay.md  0005-renderer-seam-and-edit-token-conditioning.md  0006-query-token-attention-and-position-symmetry.md  0007-e2w-v0-remove-only-void-renderer.md  0008-davis2017-void-stage01-data.md  0009-stage0-segdir-referring-finetune.md
e2w/docs/proposal/: README.md
e2w/integration/: README.md
e2w/integration/adapters/: e2w_adapter.py
e2w/integration/pipelines/: e2w_pipeline.py
e2w/integration/tests/: test_e2w_adapter.py
e2w/scripts/: README.md
e2w/tools/: README.md
physics_iq_for_simple_eval/: .gitignore  CF_VEDIT_BENCHMARK_SPEC.md  README.md  bench.py  manifest.jsonl
physics_iq_for_simple_eval/annotations/: legacy_manifest.jsonl  legacy_summary.json  provenance.jsonl
physics_iq_for_simple_eval/baselines/: README.md  copy_source.py  free_regen.py
physics_iq_for_simple_eval/contracts/: piq_simple_eval_0018_remove.json  piq_simple_eval_0037_remove.json  piq_simple_eval_0038_add.json  piq_simple_eval_0048_remove.json  piq_simple_eval_0050_add.json  piq_simple_eval_0051_add.json  piq_simple_eval_0053_remove.json  piq_simple_eval_0063_remove.json  piq_simple_eval_0246_remove.json  piq_simple_eval_0248_add.json  piq_simple_eval_0251_add.json  piq_simple_eval_0261_add.json
physics_iq_for_simple_eval/judges/: legacy_vlm_judge_prompts.jsonl  vlm_judge.py  vlm_prompts.jsonl
physics_iq_for_simple_eval/predictions/copy_source/: predictions.jsonl  run_meta.json
physics_iq_for_simple_eval/results/copy_source/: leaderboard.md  per_sample.jsonl  summary.json  vlm_judge_meta.json
physics_iq_for_simple_eval/schemas/: contract.schema.json  manifest.schema.json
physics_iq_for_simple_eval/tests/: test_cf_vedit_benchmark.py
physics_iq_for_simple_eval/tools/: make_prediction_run.py  migrate_legacy_physics_iq.py
